[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Interactions/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/Top-Down_Asset_Pack/Shooter/Spritesheet/spritesheet_tiles.png" type="Texture" id=2]
[ext_resource path="res://src/Interactions/InteractionArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Lock.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.2853, 5.379 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 40 )

[node name="Door" type="StaticBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 1 )

[node name="door" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 962, 1281, 64, 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 0 )
rotation = -3.14159
scale = Vector2( 0.497781, -1.67317 )
shape = SubResource( 1 )

[node name="InteractionArea" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 0 )
scale = Vector2( 0.8, 1 )

[node name="ActorDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorDetector"]
position = Vector2( 32, 0 )
shape = SubResource( 2 )

[node name="Lock" type="Sprite" parent="."]
position = Vector2( 32, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
[connection signal="action_complete" from="InteractionArea" to="." method="_on_InteractionArea_action_complete"]
[connection signal="body_entered" from="ActorDetector" to="." method="_on_ActorDetector_body_entered"]
[connection signal="body_exited" from="ActorDetector" to="." method="_on_ActorDetector_body_exited"]
